@@ -66,7 +66,7 @@
               </a>\n
             </li>\n
           </ul>\n
-        </li> \n
+        </li>\n
       </tal:block>\n
     </div>\n
     <input type="submit" id="upload" name="Upload" value="Upload" i18n:translate="" i18n:domain="ui"/>\n
