@@ -39,7 +39,6 @@
 <tal:block tal:define="website here/getWebSiteValue;\n
                        enctype string:multipart/form-data;\n
                        portal_path python:website.absolute_url();">\n
- <a id="right_message" i18n:translate="" i18n:domain="ui">Not Implemented yet</a>\n
  <div id="preference_dialog" title="UNG Preferences" i18n:translate="" i18n:domain="ui"></div> \n
  <tal:block tal:condition="here/portal_membership/isAnonymousUser">\n
    <a id="login" href="#" i18n:translate="" i18n:domain="ui">Sign in</a>\n
